--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -1,4 +1,5 @@
 name: terraform-ci
+
 on:
   pull_request:
     branches: [ "main" ]
@@ -14,7 +15,7 @@ jobs:
         with:
           terraform_version: 1.8.5
 
-      - name: Terraform FMT
+      - name: Terraform FMT (style check)
         run: terraform fmt -check -recursive
 
       - name: Terraform Init
@@ -26,7 +27,7 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -no-color -out=tfplan.bin
 
-      - name: Terraform Show
+      - name: Terraform Show Plan
         run: terraform show -no-color tfplan.bin | tee plan.txt
 
       - name: Upload Plan Artifact
